--- a/Source/Samples/Sample.Maps/wwwroot/index.html
+++ b/Source/Samples/Sample.Maps/wwwroot/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Sample.GoogleMap</title>
+    <title>Sample.Maps</title>
     <base href="/" />
     <link href="css/app.css" rel="stylesheet" />
-    <link href="Sample.GoogleMap.styles.css" rel="stylesheet" />
+    <link href="Sample.Maps.styles.css" rel="stylesheet" />
 </head>
 
 <body>
