--- a/Source/Samples/Samples/wwwroot/index.html
+++ b/Source/Samples/Samples/wwwroot/index.html
@@ -1,13 +1,14 @@
-﻿<!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Sample.Maps</title>
+    <title>Samples</title>
     <base href="/" />
+    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
-    <link href="Sample.Maps.styles.css" rel="stylesheet" />
+    <link href="Proxoft.Maps.Samples.styles.css" rel="stylesheet" />
 </head>
 
 <body>
