--- a/Source/Samples/Samples/wwwroot/index.html
+++ b/Source/Samples/Samples/wwwroot/index.html
@@ -8,6 +8,7 @@
     <base href="/" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="css/customMarker.css" rel="stylesheet" />
+    <link href="css/polygon.css" rel="stylesheet" />
     <link href="Proxoft.Maps.Samples.styles.css" rel="stylesheet" />
 </head>
 
